Content tweaks to recirc-loop.html

--- a/Systems/recirc-loop.html
+++ b/Systems/recirc-loop.html
@@ -45,7 +45,7 @@
 
         <p><a href="../systems.html">Systems</a> > <a href="../Systems/water.html">Water</a> > <b>Hot Water Recirculating Loop</b></p>
 
-         <p>A recirculating hot water loop is a way to design the hot water plumbing to minimize energy and water waste. It consists of a water pump located at the hot water heater connected to a pipe that runs throughout the house near all hot water taps. The pump is activated by a motion detector in each bathroom, the laundry room, and the kitchen.</p>
+         <p>A recirculating hot water loop is a way to design the hot water plumbing to minimize energy and water waste. It consists of a water pump located at the hot water heater connected to a pipe that runs throughout the house near all hot water taps. The pump is activated by a motion detector in each bathroom and the laundry room, and a push-button in the kitchen.</p>
 
         <p>When someone enters a bathroom, the motion detector turns on the pump, which then pumps hot water into the recirculation loop pipe, and the cold contents of the pipe come back into the water heater to be reheated. After a few seconds, the cooled-off water in the pipe has been replaced with hot water from the tank. Then, when the person in the bathroom turns on the hot water tap, it is only necessary to run out the water from the short pipe that branches off the recirculation loop to the tap before the water is hot.</p>
 
