Fix solar-panels math.

--- a/Systems/solar-panels.html
+++ b/Systems/solar-panels.html
@@ -66,7 +66,7 @@
 
          <p>Wholesale power costs can be complicated as are retail rates, but over a 12-month average, our northern California example has a wholesale price of about 6 cents per kilowatt-hour.</p>
 
-         <p>To sum up the conclusions from this example, with solar PV one could generate electricity for about 10 cents/kWh, and offset purchases at 25 cents/kWh. Any power overgenerated at the end of a 12-month period would be compensated at 6 cents/kWh. If the home uses about 10,000 kWh/yr, that's (10,000 kWh/yr)(25 cents/kWH - 10 cents / kWh) + (2,500 kWh)(6 cents/kWh) = $1650 / yr, or $33,000 over 20 yrs - a $9,000 profit over the initial purchase price of the PV system.</p>
+         <p>To sum up the conclusions from this example, with solar PV one could generate electricity for about 10 cents/kWh, and offset purchases at 25 cents/kWh. Any power overgenerated at the end of a 12-month period would be compensated at 6 cents/kWh. If the home uses about 10,000 kWh/yr, that's (10,000 kWh/yr)(25 cents/kWH) + (2,500 kWh)(6 cents/kWh) = $2650 / yr, or $53,000 over 20 yrs - $29,000 saved after subtracting the initial purchase price of the PV system.</p>
 
     </div>
     
