Content tweaks to sound-air.html

--- a/Systems/sound-air.html
+++ b/Systems/sound-air.html
@@ -50,7 +50,7 @@
                 <div class="split right">
                     <div class="copy-block">
                         <h2>Heat Recovery Ventilation</h2>
-                        <p class="body-md">A Heat Recovery Ventilation device acts a hub for your ventilation system and recovers heat that is being exhausted to the outdoors. Paired with a high-efficiency heating and cooling system, an HRV dramatically reduces energy needs to heat or cool your home while keeping your air fresh, filtered, and oxygenated.</p>
+                        <p class="body-md">A Heat Recovery Ventilation device acts as a hub for your ventilation system and recovers heat from the stale air that is being exhausted to the outdoors. Paired with a high-efficiency heating and cooling system, an HRV dramatically reduces energy needs to heat or cool your home while keeping your air fresh, filtered, and oxygenated.</p>
 
                     <button class="learn-more" onclick="location.href='climate-management.html#hrv'" type="button">Learn More</button>
                     </div>
@@ -111,7 +111,7 @@
                 <div class="split right">
                     <div class="copy-block">
                         <h2>Great Sound Isolation</h2>
-                        <p class="body-md">Through its use of triple-pane windows, a ductless HVAC system, individual room insulation, and drop door seals, you can have great sound isolation. This lets roommates work in peace and isolates you from outdoor noise so you won't wake up to the morning garbage trucks. It also lets a roommate play loud music or practice their instrument without disrupting others.</p>
+                        <p class="body-md">Through the use of triple-pane windows, a ductless HVAC system, individual room insulation, and drop door seals, you can have great sound isolation. This lets roommates work in peace and isolates you from outdoor noise so you won't wake up to the morning garbage trucks. It also lets a roommate play loud music or practice their instrument without disrupting others.</p>
                     </div>
                 </div>     
             </div>
