--- a/Systems/electricity.html
+++ b/Systems/electricity.html
@@ -57,7 +57,7 @@
                 <div class="split right">
                     <div class="copy-block">
                         <h2>100% Electric</h2>
-                        <p class="body-md">Your water heater, climate control, washer/dryer, and cooking appliances can all run 100% off clean electric power. Charge several electric cars. Power perfect temperature with a heat pump. Have great combustion free cooking with an induction cooktop, combination oven, and more. Make money selling energy back to the grid. Usher in the end of the fossil fuel era. Take control over your life and keep the lights on when the power company can't.</p>
+                        <p class="body-md">Your water heater, climate control, washer/dryer, and cooking appliances can all run 100% off clean electric power. Charge several electric cars. Have fast and precise combustion-free cooking with an induction cooktop, combination oven, and more. Make money selling energy back to the grid. Usher in the end of the fossil fuel era. Take control over your life and be your own power plant.</p>
                     </div>
                 </div>
             </div>
