content tweaks for water.html

--- a/Systems/water.html
+++ b/Systems/water.html
@@ -64,7 +64,7 @@
                 <div class="split left">
                     <div class="copy-block">
                         <h2>Hot Water Recirculating Loops</h2>
-                        <p class="body-md">Ordinarily, every time you turn on a hot faucet you have to wait for the cold water to be cleared out. This not only wastes water and time, but is uncomfortable when while you’re waiting naked in the shower. Motion-detectors automagically turn on the recircirculating loop giving you instant hot water.</p>
+                        <p class="body-md">Ordinarily, every time you turn on a hot faucet you have to wait for the cold water to be cleared out. This not only wastes water and time, but is uncomfortable while you’re waiting naked in the shower. Motion-detectors automagically turn on the recircirculating loop as you approach giving you instant hot water.</p>
 
                     <button class="learn-more" onclick="location.href='recirc-loop.html'" type="button">Learn More</button>
                     </div>
@@ -97,7 +97,7 @@
                 <div class="split left">
                     <div class="copy-block">
                         <h2>Rainwater Capture</h2>
-                        <p class="body-md">Rainwater presents an opportunity to capture free water. Sometimes referred to as “purple water”, captured rainwater can be stored either in an above ground or underwater cistern. Not suitable for drinking, but suitable for many of the same uses as greywater captured rainwater can be used for flushing toilets, running your washing machine, or watering your landscape.</p>
+                        <p class="body-md">Rainwater presents an opportunity to capture free water. Sometimes referred to as “purple water”, captured rainwater can be stored either in an above ground or underwater cistern. Not suitable for drinking, but suitable for many of the same uses as greywater, captured rainwater can be used for flushing toilets, running your washing machine, or watering your landscape.</p>
                     </div>
                 </div>
             </div>
