Directly update homeowner quote in home-compiled.html
@Webstir: Is there a script to generate home-compiled.html?

--- a/home-compiled.html
+++ b/home-compiled.html
@@ -99,7 +99,7 @@ connection.</p>
 
     <div class="banner">
         <blockquote>
-            <span class="quote-mark">“</span>Incentive structure is flawed, not building quality. Building quality is cost-effective and should be incentivized.                                                                                   
+            <span class="quote-mark">“</span>We didn't know what we were missing until we lived in a high-performance, all-electric home. We hope everyone can live this experience in the better world we're building together.                                                                                   
         </blockquote>
         <p class="quote-citation">-LilyPad Homeowners</p>
     </div>
