Directly update homeowner quote in index.html

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
     <div class="banner">
         <blockquote>
-            <span class="quote-mark">“</span>High-performance homes save you money and are a joy to live in. This makes your life easy, comfortable, and fun.<span class="quote-mark">”</span>                         
+            <span class="quote-mark">“</span>We didn't know what we were missing until we lived in a high-performance, all-electric home. We hope everyone can live this experience in the better world we're building together.<span class="quote-mark">”</span>                         
         </blockquote>
         <p class="quote-citation">-LilyPad Homeowners</p>
     </div>
