--- a/Systems/climate-management.html
+++ b/Systems/climate-management.html
@@ -51,6 +51,8 @@
         <p>Repercussions from moisture include condensation inside walls and other building components, causing dry rot and destruction of building materials. High indoor humidity can encourage unhealthful mold and other fungal growth.</p>
 
         <a class="page-anchor" name="hrv"></a>
+        
+         <img src="../IMG/Deep-Dive/HRV-diagram.jpg"/>
 
         <h1>Heat Recovery Ventilation</h1>
 
